[package]
name = "semantic-layer-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml_edit = "0.23.2"
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
color-eyre = "0.6.5"
